--- a/src/aspnetcore-aad-charts/values.yaml
+++ b/src/aspnetcore-aad-charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: chunliu/aspnetcore-aad
+  repository: ghcr.io/chunliu/aspnetcore-aad
   pullPolicy: IfNotPresent
   tag: "v0.2.0"
 
