demo managed identity

--- a/src/aspnetcore-aad/appsettings.json
+++ b/src/aspnetcore-aad/appsettings.json
@@ -14,5 +14,8 @@
     }
   },
   "AKSClusterInfo": "akscluster1",
+  "KeyVaultUri": "",
+  "UserAssignedIdentityClientId": "",
+  "SecretName": "",
   "AllowedHosts": "*"
 }
