--- a/src/aspnetcore-aad/aspnetcore-aad.csproj
+++ b/src/aspnetcore-aad/aspnetcore-aad.csproj
@@ -10,9 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.4.0-beta.3" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0-beta.4" />
     <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="0.4.0-preview" />
-    <PackageReference Include="Microsoft.Identity.Web.UI" Version="0.4.0-preview" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.6.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 	<Choose>
