Add hosting env

--- a/src/aspnetcore-aad/appsettings.json
+++ b/src/aspnetcore-aad/appsettings.json
@@ -16,5 +16,6 @@
   "KeyVaultUri": "",
   "UserAssignedIdentityClientId": "",
   "SecretName": "",
+  "HostingEnv": "Prod",
   "AllowedHosts": "*"
 }
