--- a/src/aspnetcore-aad-charts/values.yaml
+++ b/src/aspnetcore-aad-charts/values.yaml
@@ -4,12 +4,12 @@
 
 replicaCount: 1
 
-aadPodIdBinding: # aad pod identity binding
+serviceAccountName: # aad pod identity binding
 
 image:
-  repository: ghcr.io/chunliu/aspnetcore-aad
+  repository: chunliu.azurecr.io/aksdemo
   pullPolicy: IfNotPresent
-  tag: "v0.5.5"
+  tag: "v0.6.1"
 
 service:
   type: ClusterIP
@@ -44,6 +44,5 @@ env:
   aadClientId: # Client Id
   aadTenantId: # Tenant Id
   keyVaultUri: # Azure key vault Uri
-  userAssignedIdentityClientId: # User assigned identity, has permission to the key vault
   secretName: # The secret name
   hostingEnv: # The hosting environment, e.g. Dev, Prod etc.
