--- a/src/aspnetcore-aad/Dockerfile
+++ b/src/aspnetcore-aad/Dockerfile
@@ -7,14 +7,13 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["aspnetcore-aad.csproj", ""]
-RUN dotnet restore "./aspnetcore-aad.csproj"
 COPY . .
-WORKDIR "/src/."
-RUN dotnet build "aspnetcore-aad.csproj" -c Release -o /app/build
+
+RUN dotnet restore "./aspnetcore-aad.csproj"
+RUN dotnet build "./aspnetcore-aad.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "aspnetcore-aad.csproj" -c Release -o /app/publish
+RUN dotnet publish "./aspnetcore-aad.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
